--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=f0eff63e415e95e95532f2f5e0da2add
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://admin:Afpa1234@127.0.0.1:3306/the_district?serverVersion=mariadb-10.6.7&charset=utf8mb4"
+DATABASE_URL="mysql://admin:Afpa1234@127.0.0.1:3306/the_district?serverVersion=10.6.7-Maria-DB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
