--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,9 +17,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\AppCustomAuthenticator
+            custom_authenticator: App\Security\UserFormAuthenticator
             logout:
                 path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -27,9 +29,13 @@ security:
                 secret: '%kernel.secret%'
                 lifetime: 604800
                 path: /
+            # form_login:
+            #     login_path: app_login
+            #     check_path: app_login
+                # enable_csrf: true
                 # by default, the feature is enabled by checking a checkbox in the
                 # login form, uncomment the following line to always enable it.
-                #always_remember_me: true
+                always_remember_me: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
