--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "symfony/ux-turbo": "^2.16",
         "symfony/validator": "6.4.*",
         "symfony/web-link": "6.4.*",
+        "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "6.4.*",
         "symfonycasts/verify-email-bundle": "*",
         "twig/extra-bundle": "^2.12|^3.0",
