--- a/composer.json
+++ b/composer.json
@@ -41,12 +41,13 @@
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
         "symfony/ux-turbo": "^2.16",
+        "symfony/ux-vue": "^2.17",
         "symfony/validator": "6.4.*",
         "symfony/web-link": "6.4.*",
         "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "6.4.*",
         "symfonycasts/verify-email-bundle": "*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.10",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
