--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,9 +6,9 @@
 parameters:
 
 services:
-    app.logger:
-        class: Psr\Log\LoggerInterface
-        arguments: ['@monolog.logger.app']
+    # app.logger:
+    #     class: Psr\Log\LoggerInterface
+    #     arguments: ['@monolog.logger.app']
 
     # App\Service\MyService:
     #      arguments:
