--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -42,7 +42,8 @@ app_login :
     controller : App\Controller\SecurityController::login
 
 
-
+api_login_check:
+    path: /api/login_check
 
 # RegistrationController
 
