--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/core": "^3.2",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
         "fzaninotto/faker": "^1.5",
         "javiereguiluz/easyslugger": "^1.0",
+        "lexik/jwt-authentication-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.28",
         "symfony/asset": "6.4.*",
@@ -48,7 +50,8 @@
         "symfony/yaml": "6.4.*",
         "symfonycasts/verify-email-bundle": "*",
         "twig/extra-bundle": "^3.10",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "web-token/jwt-framework": "^3.4"
     },
     "config": {
         "allow-plugins": {
@@ -75,7 +78,8 @@
         "symfony/polyfill-php73": "*",
         "symfony/polyfill-php74": "*",
         "symfony/polyfill-php80": "*",
-        "symfony/polyfill-php81": "*"
+        "symfony/polyfill-php81": "*",
+        "symfony/polyfill-php82": "*"
     },
     "scripts": {
         "auto-scripts": {
