--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,5 @@
 security:
+    enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -14,22 +15,38 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+        main: 
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\UserFormAuthenticator
             logout:
-                path: app_logout
+                path: app_logout   
+            
+            
+            
                 # where to redirect after logout
                 # target: app_any_route
                 # where to redirect after logout
                 # target: app_any_route
 
-            remember_me:
-                secret: '%kernel.secret%'
-                lifetime: 604800
-                path: /
-                always_remember_me: true
+        login: 
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure       
+        api:
+            pattern:   ^/api
+            stateless: true
+            jwt: ~
+            
+        
+            # remember_me:
+            #     secret: '%kernel.secret%'
+            #     lifetime: 604800
+            #     path: /
+            #     always_remember_me: true
             # form_login:
                 # login_path: app_login
             #     check_path: app_login
@@ -46,9 +63,13 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+            
+
+            # access_control:
+            #   - { path: ^/api/login, roles: PUBLIC_ACCESS }
+            #   - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+            # - { path: ^/admin, roles: ROLE_ADMIN }
+            # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
